<resources>
    <string name="app_name">NFT Marketplace</string>
    <string name="error_load_image">error load image</string>

    <!-- INTRO -->
    <string name="intro_title">Discover digital art &amp; Collect NFTs</string>
    <string name="intro_description">NFT marketplace UI created with Anima for Figma. Collect, buy and sell art from more than 20k NFT artists.</string>
    <string name="intro_button">Get Started</string>
    <string name="intro_name">Space Walking</string>
    <string name="intro_author">Animakid</string>
    <string name="intro_total_sale_value">240k+</string>
    <string name="intro_total_sale_title">Total Sale</string>
    <string name="intro_auctions_value">100k+</string>
    <string name="intro_auctions_title">Auctions</string>
    <string name="intro_authors_value">170k+</string>
    <string name="intro_authors_title">Artists</string>

    <!-- TRENDING COLLECTION -->
    <string name="trending_collection_title">Trending Collection</string>
    <string name="trending_collection_description">Checkout our weekly updated trending collection.</string>
    <string name="trending_collection_count">125+</string>
    <string name="trending_collection_name">DSGN Animals</string>
    <string name="trending_collection_author_name">MrFox</string>

    <!-- TOP CREATORS-->
    <string name="top_creators_title">Top creators</string>
    <string name="top_creators_description">Checkout Top Rated Creators on the NFT Marketplace.</string>
    <string name="view_rankings_button_text">View Rankings</string>

    <!-- TOP CREATORS ITEMS PAGE -->
    <string name="top_creators_items_page_number">#</string>
    <string name="top_creators_items_page_name">Artist</string>
    <string name="top_creators_items_page_amount">Volume</string>

    <!-- TOP CREATORS ITEMS BLOCK -->
    <string name="top_creators_items_block_authors_name">Keepitreal</string>
    <string name="top_creators_items_block_total_sales_title">Total Sales:</string>
    <string name="top_creators_items_block_total_sales_value">34.53 ETH</string>

    <!-- CATEGORIES  -->
    <string name="categories_title">Browse Categories</string>
    <string name="category_item_title">Категория</string>

    <!-- DISCOVER MORE NFT -->
    <string name="discover_more_nft_title">Discover More NFTs</string>
    <string name="discover_more_nft_description">Explore new trending NFTs.</string>
    <string name="discover_more_nft_button_text">See All</string>

    <!-- HOW IT WORKS -->
    <string name="how_it_works_title">How it works</string>
    <string name="how_it_works_description">Find out how to get started.</string>
    <string name="how_it_works_block_one_title">Setup Your wallet</string>
    <string name="how_it_works_block_one_description">Set up your wallet of choice. Connect it to the NFT market by clicking the wallet icon in the top right corner.</string>
    <string name="how_it_works_block_two_title">Create Collection</string>
    <string name="how_it_works_block_two_description">Upload your work and setup your collection. Add a description, social links and floor price.</string>
    <string name="how_it_works_block_three_title">Start Earning</string>
    <string name="how_it_works_block_three_description">Choose between auctions and fixed-price listings. Start earning by selling your NFTs or trading others.</string>

    <!-- PAINTING ITEM-->
    <string name="painting_item_price">Price</string>
    <string name="painting_item_bet">Highest Bid</string>
</resources>