<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topAuthorItem"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_block">

    <ImageView
        android:id="@+id/topAuthorImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corners_rounded_30dp"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/error_load_image" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/background_rank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topAuthorRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_mono_regular"
            android:text="1"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/topAuthorName"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeTextType="uniform"
        android:autoSizeStepGranularity="2sp"
        android:fontFamily="@font/work_sans_semi_bold"
        android:text="@string/top_creators_items_block_authors_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/topAuthorImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topAuthorItemTotalSalesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/work_sans_regular"
        android:text="@string/top_creators_items_block_total_sales_title"
        android:textColor="@color/light_grey"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/topAuthorImage"
        app:layout_constraintTop_toBottomOf="@+id/topAuthorName" />

    <TextView
        android:id="@+id/topAuthorSales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/space_mono_regular"
        android:text="@string/top_creators_items_block_total_sales_value"
        android:textColor="?attr/colorSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/topAuthorItemTotalSalesTitle"
        app:layout_constraintTop_toBottomOf="@+id/topAuthorName" />

</androidx.constraintlayout.widget.ConstraintLayout>