<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paintingItem"
    android:layout_width="315dp"
    android:layout_height="400dp"
    android:background="@drawable/background_block">

    <ImageView
        android:id="@+id/paintingItemImage"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/category"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:background="@drawable/corners_rounded_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/error_load_image" />

    <TextView
        android:id="@+id/paintingName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Distant Galaxy"
        android:fontFamily="@font/work_sans_semi_bold"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paintingItemImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paintingName">

        <ImageView
            android:id="@+id/paintingItemAuthorImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/corners_rounded_12dp"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/category" />

        <TextView
            android:id="@+id/paintingItemAuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:fontFamily="@font/space_mono_regular"
            android:text="MoonDancer"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/paintingItemAuthorImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/paintingItemPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/painting_item_price"
            android:fontFamily="@font/space_mono_regular"
            android:textColor="@color/light_grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paintingItemPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.63 ETH"
            android:fontFamily="@font/space_mono_regular"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paintingItemPriceTitle" />" />

        <TextView
            android:id="@+id/paintingItemBetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/painting_item_bet"
            android:fontFamily="@font/space_mono_regular"
            android:textColor="@color/light_grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paintingItemBetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.33 wETH"
            android:fontFamily="@font/space_mono_regular"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paintingItemBetTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>